--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,11 @@
 }
 
 body {
-  line-height: 1.65;
+  line-height: 1.5;
   margin: 0;
 }
 
 .info {
   display: none;
-  margin-top: 40px;
+  margin: 20px 0;
 }
